--- a/app/globals.css
+++ b/app/globals.css
@@ -117,6 +117,18 @@
     }
   }
   
+  @keyframes blob {
+    0%, 100% {
+      transform: translate(0px, 0px) scale(1);
+    }
+    33% {
+      transform: translate(30px, -50px) scale(1.1);
+    }
+    66% {
+      transform: translate(-20px, 20px) scale(0.9);
+    }
+  }
+  
   .animate-shimmer {
     animation: shimmer 2s infinite linear;
   }
@@ -135,6 +147,18 @@
   
   .animate-fade-in {
     animation: fade-in 0.6s ease-out forwards;
+  }
+  
+  .animate-blob {
+    animation: blob 7s infinite;
+  }
+  
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+  
+  .animation-delay-4000 {
+    animation-delay: 4s;
   }
   
   /* Button micro-interactions */
